PRL-5206 - fixed sonar issue fixes & test case failures